--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Equinox
 nav:
   - Home: index.md
+  - About: guide/about.md
   - Guide:
-    - About: guide/about.md
     - Installation: guide/installation.md
     - Workflow: guide/workflow.md
     - MIDI & Devices: guide/devices.md
@@ -26,12 +26,15 @@ nav:
 
 theme: 
   name: material
-  font: false
   palette:
     scheme: slate
     primary: custom
 
   logo: assets/logo.png
+
+markdown_extensions:
+  - attr_list
+  - md_in_html
 
 extra:
   homepage: https://verskre.github.io/Equinox/
